Changelog
=========

1.0a4 (unreleased)
------------------

* Added responsive option
* Added touch support
* Added items option to allow for multiple items per slide


1.0a3 (2012-09-12)
------------------

* New option to use a numeric and arrowed navigation


1.0a2 (2011-09-15)
------------------

* Fixed overflow issue in IE <= 7


1.0a1 (2011-09-06)
------------------

* Initial release